Add some background color.

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Time Tracker</title>
   <meta name="description" content="Simple Time Tracker">
+  <style>
+    body, html {
+      background-color: DarkSlateGray;
+      color: LightGrey;
+      height: 100%
+    }
+  </style>
 </head>
 <body>
 </body>
