Add CSS framework.

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Time Tracker</title>
   <meta name="description" content="Simple Time Tracker">
+  <link data-trunk rel="css" href="/public/materialize.min.css"/>
   <style>
     body, html {
       background-color: DarkSlateGray;
