Fix some coloring

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,12 +8,10 @@
   <link data-trunk rel="css" href="/public/materialize.min.css"/>
   <style>
     body, html {
-      background-color: DarkSlateGray;
-      color: LightGrey;
       height: 100%
     }
   </style>
 </head>
-<body>
+<body class="teal-text text-lighten-5 grey darken-4">
 </body>
 </html>
