--- a/ui/index.html
+++ b/ui/index.html
@@ -6,9 +6,37 @@
   <title>Time Tracker</title>
   <meta name="description" content="Simple Time Tracker">
   <link data-trunk rel="css" href="/public/materialize.min.css"/>
+  <link data-trunk rel="copy-file" href="/public/MaterialIcons-Regular.ttf"/>
   <style>
     body, html {
       height: 100%
+    }
+    @font-face {
+      font-family: 'Material Icons';
+      font-style: normal;
+      font-weight: 400;
+      src: url(/MaterialIcons-Regular.ttf);
+    }
+    .material-icons {
+      font-family: 'Material Icons';
+      font-weight: normal;
+      font-style: normal;
+      font-size: 24px;  /* Preferred icon size */
+      display: inline-block;
+      line-height: 1;
+      text-transform: none;
+      letter-spacing: normal;
+      word-wrap: normal;
+      white-space: nowrap;
+      direction: ltr;
+
+      /* Support for all WebKit browsers. */
+      -webkit-font-smoothing: antialiased;
+      /* Support for Safari and Chrome. */
+      text-rendering: optimizeLegibility;
+
+      /* Support for Firefox. */
+      -moz-osx-font-smoothing: grayscale;
     }
   </style>
 </head>
