Add dark and light theme

--- a/index.html
+++ b/index.html
@@ -1,45 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Time Tracker</title>
-  <meta name="description" content="Simple Time Tracker">
-  <link data-trunk rel="css" href="/public/materialize.min.css"/>
-  <link data-trunk rel="copy-file" href="/public/MaterialIcons-Regular.ttf"/>
-  <style>
-    body, html {
-      height: 100%
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Time Tracker</title>
+    <meta name="description" content="Simple Time Tracker">
+    <meta name="color-scheme" content="dark light">
+    <style>
+    * {
+      box-sizing: border-box;
     }
-    @font-face {
-      font-family: 'Material Icons';
-      font-style: normal;
-      font-weight: 400;
-      src: url(/MaterialIcons-Regular.ttf);
+    body {
+      cursor: default;
+      overflow: hidden;
     }
-    .material-icons {
-      font-family: 'Material Icons';
-      font-weight: normal;
-      font-style: normal;
-      font-size: 24px;  /* Preferred icon size */
-      display: inline-block;
-      line-height: 1;
-      text-transform: none;
-      letter-spacing: normal;
-      word-wrap: normal;
-      white-space: nowrap;
-      direction: ltr;
-
-      /* Support for all WebKit browsers. */
-      -webkit-font-smoothing: antialiased;
-      /* Support for Safari and Chrome. */
-      text-rendering: optimizeLegibility;
-
-      /* Support for Firefox. */
-      -moz-osx-font-smoothing: grayscale;
+    button {
+      cursor: pointer;
     }
-  </style>
-</head>
-<body class="teal-text text-lighten-5 grey darken-4">
-</body>
+    </style>
+  </head>
+  <body></body>
 </html>
